# swip-server

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2018-06-02-191025_create_user/: up.sql
migrations/2018-06-12-083610_create_users/: up.sql
migrations/2018-06-18-191941_create_parties/: down.sql
migrations/2018-06-19-094051_create_parties/: down.sql  up.sql
migrations/2018-06-19-102415_create_users_parties/: down.sql  up.sql
src/: main.rs  schema.rs
src/database/: connection.rs  mod.rs  models.rs  models_init.rs  queries.rs  schema.rs
src/database/conn_handlers/parties/: mod.rs
src/database/conn_handlers/users/: mod.rs
src/database/models/: mod.rs  user.rs
src/database/models/parties/: mod.rs
src/database/models/users/: mod.rs
src/database/queries/parties/: mod.rs
src/database/queries/users/: mod.rs
src/graphql/: context.rs  executor.rs  mod.rs  request.rs  schema.rs  types.rs
src/graphql/resolvers/users/: mod.rs
src/graphql/schema/parties/: mod.rs
src/graphql/schema/users/: mod.rs
