[package]
name = "swipe-server"
version = "0.1.0"
authors = ["Cédric Legendre <cedric.legendre@epitech.eu"]

[dependencies]
juniper = { version = "0.8.0", features = ["iron-handlers"] }
juniper_rocket = "0.1.2"

diesel = { version = "1.3.0", features = ["mysql"] }
diesel_codegen = { version = "0.16.1", features = ["mysql"] }
dotenv = "0.8"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"

rocket = "0.3.12"
rocket_codegen = "0.3.12"
rocket_contrib = { version = "0.3.12", default-features = false, features = ["json"] }

serde = "1.0.65"
serde_json = "1.0.19"
serde_derive = "1.0.65"

log4rs = "0.8.0"


