[package]
name = "swipe-server"
version = "0.1.0"
authors = ["Cédric Legendre <cedric.legendre@epitech.eu>"]

[dependencies]
juniper = { version = "0.9.2" }

env_logger = "0.5"
actix = "0.5"
actix-web = "^0.6"

diesel = { version = "1.3.0", features = ["mysql", "r2d2", "chrono"] }
diesel_codegen = { version = "0.16.1", features = ["mysql"] }
dotenv = "0.8"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
chrono = { version = "0.4.3", features = ["serde"] }
uuid = "0.6.5"

futures = "0.1"
serde = "1.0.65"
serde_json = "1.0.19"
serde_derive = "1.0.65"

log4rs = "0.8.0"

num_cpus = "1.8.0"


