[package]
name = "swipe-server"
version = "0.1.0"
authors = ["Cédric Legendre <cedric.legendre@epitech.eu>"]

[dependencies]
juniper = { version = "0.9.2" }

colored = "1.6"

env_logger = "0.5"
actix = "0.5"
actix-web = "^0.6"

diesel = { version = "1.3.0", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.8"
chrono = { version = "0.4.3", features = ["serde"] }
uuid = "0.6.5"

futures = "0.1"
serde = "1.0.65"
serde_json = "1.0.19"
serde_derive = "1.0.65"

num_cpus = "1.8.0"
